--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">fiapapp</string>
-    <string name="continue_text">Continue</string>
-    <string name="register_text">Let\´s start with creating your account</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string name="phone_number">Phone Number</string>
+    <string name="continue_text">Registrar-se</string>
+    <string name="register_text">Crie sua conta !</string>
+    <string name="first_name">Nome</string>
+    <string name="last_name">Sobrenome</string>
+    <string name="phone_number">Telefone</string>
     <string name="title_activity_client_home">ClientHomeActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
